[workspace]
members = [
    "tribewarez-staking",
    "tribewarez-vault",
    "tribewarez-swap",
    "tribewarez-pot-o",
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = [
    'cfg(feature, values("anchor-debug", "custom-heap", "custom-panic", "solana"))',
] }

[workspace.dependencies]
anchor-lang = "0.29"
anchor-spl = "0.29"
solana-sdk = "1.18"
