[workspace]
members = [
    "tribewarez-staking",
    "tribewarez-vault",
    "tribewarez-swap",
    "tribewarez-pot-o",
    "tribewarez-tokens",
    "tribewarez-governance",
    "tribewarez-bridge",
    "tribewarez-router",
    "tribewarez-liquidity",
]
resolver = "2"

[workspace.lints.rust]
unexpected_cfgs = "allow"

[workspace.dependencies]
anchor-lang = "0.29"
anchor-spl = "0.29"
solana-sdk = "1.18"
