[package]
name = "tribewarez-bridge"
version = "0.3.2"
edition = "2021"
description = "Cross-chain token bridge for Tribewarez DeFi (NMTC/PPTC wrapping)"
license = "MIT"
repository = "https://github.com/TribeWarez/pot-o-contractz"
homepage = "https://defi.tribewarez.com"
keywords = ["solana", "anchor", "tribewarez", "bridge", "cross-chain"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
solana-program = "1.18"
spl-token = "4.0"
pot-o-core = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
