[package]
name = "tribewarez-liquidity"
version = "0.3.2"
edition = "2021"
description = "AMM liquidity pool program for Tribewarez DeFi"
license = "MIT"
repository = "https://github.com/TribeWarez/pot-o-contractz"
homepage = "https://defi.tribewarez.com"
keywords = ["solana", "anchor", "tribewarez", "liquidity", "amm"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
solana-program = "1.18"
spl-token = "4.0"
pot-o-core = "0.1.0"

[lib]
crate-type = ["cdylib", "lib"]

[[test]]
name = "integration_tests"
path = "tests/integration_tests.rs"
