[package]
name = "tribewarez-pot-o"
version = "0.1.0"
description = "PoT-O (Proof of Tensor Optimizations) on-chain program"
edition = "2021"
license = "MIT"
repository = "https://github.com/TribeWarez/tribe"
homepage = "https://defi.tribewarez.com"
documentation = "https://docs.rs/tribewarez-pot-o"
readme = "README.md"
keywords = ["solana", "anchor", "tribewarez", "pot-o", "defi", "blockchain"]
categories = ["cryptography::cryptocurrency"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }

[lints]
workspace = true
