[package]
name = "tribewarez-pot-o"
version = "0.2.0"
description = "PoT-O (Proof of Tensor Optimizations) on-chain program with tensor network support"
edition = "2021"
license = "MIT"
repository = "https://github.com/TribeWarez/tribe"
homepage = "https://defi.tribewarez.com"
documentation = "https://docs.rs/tribewarez-pot-o"
readme = "README.md"
keywords = ["solana", "anchor", "tribewarez", "pot-o", "defi"]
categories = ["cryptography::cryptocurrencies"]

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
pot-o-core = "0.2.0"

[dev-dependencies]
solana-sdk = { workspace = true }

[lints]
workspace = true
