[package]
name = "tribewarez-staking"
version = "0.1.0"
description = "PTtC Staking Program for Tribewarez DeFi"
edition = "2021"
license = "MIT"
repository = "https://github.com/TribeWarez/tribe"
homepage = "https://defi.tribewarez.com"
documentation = "https://docs.rs/tribewarez-staking"
readme = "README.md"
keywords = ["solana", "anchor", "tribewarez", "staking", "defi", "pttc"]
categories = ["cryptography::cryptocurrency"]

[lib]
crate-type = ["cdylib", "lib"]
name = "tribewarez_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }

[lints]
workspace = true
