[package]
name = "tribewarez-staking"
version = "0.2.0"
description = "PTtC Staking Program for Tribewarez DeFi with tensor network support"
edition = "2021"
license = "MIT"
repository = "https://github.com/TribeWarez/tribe"
homepage = "https://defi.tribewarez.com"
documentation = "https://docs.rs/tribewarez-staking"
readme = "README.md"
keywords = ["solana", "anchor", "tribewarez", "staking", "defi", "pttc", "tensor-network"]
categories = ["cryptography::cryptocurrency"]

[lib]
crate-type = ["cdylib", "lib"]
name = "tribewarez_staking"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
pot-o-core = "0.2.0"

[lints]
workspace = true
