[package]
name = "tribewarez-swap"
version = "0.1.1-alpha"
description = "PTtC Token Swap AMM for Tribewarez DeFi"
edition = "2021"
license = "MIT"
repository = "https://github.com/TribeWarez/tribe"
homepage = "https://defi.tribewarez.com"
documentation = "https://docs.rs/tribewarez-swap"
readme = "README.md"
keywords = ["solana", "anchor", "tribewarez", "swap", "amm", "defi", "pttc"]
categories = ["cryptography::cryptocurrency"]

[lib]
crate-type = ["cdylib", "lib"]
name = "tribewarez_swap"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }

[lints]
workspace = true
