[package]
name = "tribewarez-vault"
version = "0.2.0"
description = "PTtC Vault/Escrow Program for Tribewarez DeFi with tensor network support"
edition = "2021"
license = "MIT"
repository = "https://github.com/TribeWarez/tribe"
homepage = "https://defi.tribewarez.com"
documentation = "https://docs.rs/tribewarez-vault"
readme = "README.md"
keywords = ["solana", "anchor", "tribewarez", "vault", "escrow", "defi", "pttc", "tensor-network"]
categories = ["cryptography::cryptocurrency"]

[lib]
crate-type = ["cdylib", "lib"]
name = "tribewarez_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true }
pot-o-core = "0.2.0"

[lints]
workspace = true
